added main header layout

--- a/index.html
+++ b/index.html
@@ -19,7 +19,29 @@
         <title>Bootstrap Freelancer</title>
         
     </head>
-    <body>
+    <body class="debug">
+
+        <!-- Main Header -->
+        <header class="bg-secondary db-border db-h-1x container-fluid">
+            <div class="row">
+                <div class="col bg-info">
+                    Brand
+                </div>
+                <div class="col bg-success">
+                    Menu/icon
+                </div>
+            </div>
+        </header>
+
+        <!-- Main Content -->
+        <main>
+
+        </main>
+
+        <!-- Footer -->
+        <footer>
+
+        </footer>
         
     </body>
 </html>
