added jumbotron layout

--- a/index.html
+++ b/index.html
@@ -36,6 +36,12 @@
         <!-- Main Content -->
         <main>
 
+            <!-- Jumbotron -->
+            <section class="bg-success db-border db-h-2x">
+                Jumbotron
+            </section>
+
+
         </main>
 
         <!-- Footer -->
