added portfolio xs layout

--- a/index.html
+++ b/index.html
@@ -41,6 +41,20 @@
                 Jumbotron
             </section>
 
+            <!-- Portfolio -->
+            <section class="bg-light db-border">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-12 bg-info db-h-1x">Card</div>
+                        <div class="col-12 bg-info db-h-1x">Card</div>
+                        <div class="col-12 bg-info db-h-1x">Card</div>
+                        <div class="col-12 bg-info db-h-1x">Card</div>
+                        <div class="col-12 bg-info db-h-1x">Card</div>
+                        <div class="col-12 bg-info db-h-1x">Card</div>
+                    </div>
+                </div>
+            </section>
+
 
         </main>
 
