--- a/index.html
+++ b/index.html
@@ -44,13 +44,14 @@
             <!-- Portfolio -->
             <section class="bg-light db-border">
                 <div class="container">
+                    <div class="db-border">Title</div>
                     <div class="row">
-                        <div class="col-12 bg-info db-h-1x">Card</div>
-                        <div class="col-12 bg-info db-h-1x">Card</div>
-                        <div class="col-12 bg-info db-h-1x">Card</div>
-                        <div class="col-12 bg-info db-h-1x">Card</div>
-                        <div class="col-12 bg-info db-h-1x">Card</div>
-                        <div class="col-12 bg-info db-h-1x">Card</div>
+                        <div class="col-12 col-md-6 bg-info db-h-1x">Card</div>
+                        <div class="col-12 col-md-6 bg-info db-h-1x">Card</div>
+                        <div class="col-12 col-md-6 bg-info db-h-1x">Card</div>
+                        <div class="col-12 col-md-6 bg-info db-h-1x">Card</div>
+                        <div class="col-12 col-md-6 bg-info db-h-1x">Card</div>
+                        <div class="col-12 col-md-6 bg-info db-h-1x">Card</div>
                     </div>
                 </div>
             </section>
