added portfolio lg layout

--- a/index.html
+++ b/index.html
@@ -46,12 +46,12 @@
                 <div class="container">
                     <div class="db-border">Title</div>
                     <div class="row">
-                        <div class="col-12 col-md-6 bg-info db-h-1x">Card</div>
-                        <div class="col-12 col-md-6 bg-info db-h-1x">Card</div>
-                        <div class="col-12 col-md-6 bg-info db-h-1x">Card</div>
-                        <div class="col-12 col-md-6 bg-info db-h-1x">Card</div>
-                        <div class="col-12 col-md-6 bg-info db-h-1x">Card</div>
-                        <div class="col-12 col-md-6 bg-info db-h-1x">Card</div>
+                        <div class="col-12 col-md-6 col-lg-4 bg-info db-h-1x">Card</div>
+                        <div class="col-12 col-md-6 col-lg-4 bg-info db-h-1x">Card</div>
+                        <div class="col-12 col-md-6 col-lg-4 bg-info db-h-1x">Card</div>
+                        <div class="col-12 col-md-6 col-lg-4 bg-info db-h-1x">Card</div>
+                        <div class="col-12 col-md-6 col-lg-4 bg-info db-h-1x">Card</div>
+                        <div class="col-12 col-md-6 col-lg-4 bg-info db-h-1x">Card</div>
                     </div>
                 </div>
             </section>
