switched to row cols sintax

--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@
             <section class="bg-light db-border">
                 <div class="container">
                     <div class="db-border">Title</div>
-                    <div class="row">
-                        <div class="col-12 col-md-6 col-lg-4 bg-info db-h-1x">Card</div>
-                        <div class="col-12 col-md-6 col-lg-4 bg-info db-h-1x">Card</div>
-                        <div class="col-12 col-md-6 col-lg-4 bg-info db-h-1x">Card</div>
-                        <div class="col-12 col-md-6 col-lg-4 bg-info db-h-1x">Card</div>
-                        <div class="col-12 col-md-6 col-lg-4 bg-info db-h-1x">Card</div>
-                        <div class="col-12 col-md-6 col-lg-4 bg-info db-h-1x">Card</div>
+                    <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3">
+                        <div class="col bg-info db-h-1x">Card</div>
+                        <div class="col bg-info db-h-1x">Card</div>
+                        <div class="col bg-info db-h-1x">Card</div>
+                        <div class="col bg-info db-h-1x">Card</div>
+                        <div class="col bg-info db-h-1x">Card</div>
+                        <div class="col bg-info db-h-1x">Card</div>
                     </div>
                 </div>
             </section>
