--- a/index.html
+++ b/index.html
@@ -56,6 +56,21 @@
                 </div>
             </section>
 
+            <!-- About -->
+            <section class="bg-success db-border">
+                <div class="container">
+                    <div class="db-border">Title</div>
+                    <div class="row justify-content-center">
+                        <div class="col-8 bg-info db-h-1x">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque, sunt debitis natus assumenda omnis tempore earum enim illum corporis voluptatum cumque dicta velit reprehenderit sapiente possimus vitae, voluptates iste quo.
+                        </div>
+                        <div class="col-8 bg-info db-h-1x">
+                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repudiandae tempora commodi tempore provident quam nesciunt, laborum exercitationem. Sequi voluptatibus a minima voluptate vitae cumque, dignissimos, accusantium accusamus impedit, qui quibusdam.
+                        </div>
+                    </div>
+                </div>
+            </section>
+
 
         </main>
 
