added about md/lg layout

--- a/index.html
+++ b/index.html
@@ -61,13 +61,14 @@
                 <div class="container">
                     <div class="db-border">Title</div>
                     <div class="row justify-content-center">
-                        <div class="col-8 bg-info db-h-1x">
+                        <div class="col-8 col-md-4 bg-danger db-h-1x">
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque, sunt debitis natus assumenda omnis tempore earum enim illum corporis voluptatum cumque dicta velit reprehenderit sapiente possimus vitae, voluptates iste quo.
                         </div>
-                        <div class="col-8 bg-info db-h-1x">
+                        <div class="col-8 col-md-4 bg-danger db-h-1x">
                             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repudiandae tempora commodi tempore provident quam nesciunt, laborum exercitationem. Sequi voluptatibus a minima voluptate vitae cumque, dignissimos, accusantium accusamus impedit, qui quibusdam.
                         </div>
                     </div>
+                    <div class="db-border">Button</div>
                 </div>
             </section>
 
