--- a/index.html
+++ b/index.html
@@ -94,7 +94,26 @@
         </main>
 
         <!-- Footer -->
-        <footer>
+        <footer class="bg-secondary">
+
+            <!-- Footer Top -->
+            <div class="container">
+                <div class="row row-cols-1">
+                    <div class="col">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus voluptate doloremque assumenda praesentium sequi illum id, ducimus nisi delectus eius aliquam dolorum veniam, similique cum excepturi maiores quaerat qui totam!
+                    </div>
+                    <div class="col">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus voluptate doloremque assumenda praesentium sequi illum id, ducimus nisi delectus eius aliquam dolorum veniam, similique cum excepturi maiores quaerat qui totam!
+                    </div>
+                    <div class="col">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus voluptate doloremque assumenda praesentium sequi illum id, ducimus nisi delectus eius aliquam dolorum veniam, similique cum excepturi maiores quaerat qui totam!
+                    </div>
+                </div>
+            </div>
+
+            <!-- Footer Bottom -->
+            <div class="bg-dark text-white db-h-1x">Footer Bottom</div>
+
 
         </footer>
         
