added footer md layout

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
             <!-- Footer Top -->
             <div class="container">
-                <div class="row row-cols-1">
+                <div class="row row-cols-1 row-cols-md-3">
                     <div class="col">
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus voluptate doloremque assumenda praesentium sequi illum id, ducimus nisi delectus eius aliquam dolorum veniam, similique cum excepturi maiores quaerat qui totam!
                     </div>
