--- a/index.html
+++ b/index.html
@@ -100,13 +100,13 @@
             <div class="container">
                 <div class="row row-cols-1 row-cols-md-3">
                     <div class="col">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus voluptate doloremque assumenda praesentium sequi illum id, ducimus nisi delectus eius aliquam dolorum veniam, similique cum excepturi maiores quaerat qui totam!
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                     </div>
                     <div class="col">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus voluptate doloremque assumenda praesentium sequi illum id, ducimus nisi delectus eius aliquam dolorum veniam, similique cum excepturi maiores quaerat qui totam!
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                     </div>
                     <div class="col">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus voluptate doloremque assumenda praesentium sequi illum id, ducimus nisi delectus eius aliquam dolorum veniam, similique cum excepturi maiores quaerat qui totam!
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                     </div>
                 </div>
             </div>
