added header layout xs

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zxx">
+<html lang="en">
     <head>
         <!-- * SETTINGS * -->
         <meta charset="UTF-8">
@@ -19,22 +19,22 @@
         <title>Bootstrap Freelancer</title>
         
     </head>
-    <body class="debug">
+    <body>
 
         <!-- Main Header -->
-        <header class="bg-secondary db-border db-h-1x container-fluid">
-            <div class="row">
-                <div class="col bg-info">
-                    Brand
+        <header class="container-fluid py-4 bg-dark text-white">
+            <div class="row align-items-center">
+                <div class="col">
+                    <a href="#" class="text-white text-decoration-none h5">START BOOTSTRAP</a>
                 </div>
-                <div class="col bg-success">
-                    Menu/icon
+                <div class="col text-end">
+                    <a href="#" class="text-white text-decoration-none"><i class="fas fa-bars fs-2"></i></a>
                 </div>
             </div>
         </header>
 
         <!-- Main Content -->
-        <main>
+        <main class="debug">
 
             <!-- Jumbotron -->
             <section class="bg-success db-border db-h-2x">
