--- a/index.html
+++ b/index.html
@@ -22,13 +22,20 @@
     <body>
 
         <!-- Main Header -->
-        <header class="container-fluid py-4 bg-dark text-white">
-            <div class="row align-items-center">
-                <div class="col">
-                    <a href="#" class="text-white text-decoration-none h5">START BOOTSTRAP</a>
-                </div>
-                <div class="col text-end">
-                    <a href="#" class="text-white text-decoration-none"><i class="fas fa-bars fs-2"></i></a>
+        <header class="py-4 bg-dark">
+            <div class="container">
+                <div class="row align-items-center">
+                    <div class="col">
+                        <a href="#" class="text-white text-decoration-none h5 text-uppercase">Start Bootstrap</a>
+                    </div>
+                    <div class="col text-end">
+                        <a href="#" class="text-white text-decoration-none d-md-none"><i class="fas fa-bars fs-2"></i></a>
+                        <ul class="list-inline  text-white d-none d-md-block fw-bold mb-0">
+                            <li class="list-inline-item"><a href="#" class="text-white text-decoration-none text-uppercase">Portfolio</a></li>
+                            <li class="list-inline-item ms-2"><a href="#" class="text-white text-decoration-none text-uppercase">About</a></li>
+                            <li class="list-inline-item ms-2"><a href="#" class="text-white text-decoration-none text-uppercase">Contact</a></li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </header>
