fixed navbar structure

--- a/index.html
+++ b/index.html
@@ -25,17 +25,28 @@
         <header class="py-4 bg-dark">
             <div class="container">
                 <div class="row align-items-center">
+
+                    <!-- Header Left -->
                     <div class="col">
                         <a href="#" class="text-white text-decoration-none h5 text-uppercase">Start Bootstrap</a>
                     </div>
+
+                    <!-- Header Right -->
                     <div class="col text-end">
+
+                        <!-- Toggler -->
                         <a href="#" class="text-white text-decoration-none d-md-none"><i class="fas fa-bars fs-2"></i></a>
-                        <ul class="list-inline  text-white d-none d-md-block fw-bold mb-0">
-                            <li class="list-inline-item"><a href="#" class="text-white text-decoration-none text-uppercase">Portfolio</a></li>
-                            <li class="list-inline-item ms-2"><a href="#" class="text-white text-decoration-none text-uppercase">About</a></li>
-                            <li class="list-inline-item ms-2"><a href="#" class="text-white text-decoration-none text-uppercase">Contact</a></li>
-                        </ul>
+
+                        <!-- Menu -->
+                        <nav class="text-white d-none d-md-block fw-bold">
+                            <ul class="list-inline mb-0">
+                                <li class="list-inline-item"><a href="#" class="text-white text-decoration-none text-uppercase">Portfolio</a></li>
+                                <li class="list-inline-item ms-2"><a href="#" class="text-white text-decoration-none text-uppercase">About</a></li>
+                                <li class="list-inline-item ms-2"><a href="#" class="text-white text-decoration-none text-uppercase">Contact</a></li>
+                            </ul>
+                        </nav>
                     </div>
+
                 </div>
             </div>
         </header>
@@ -44,8 +55,10 @@
         <main class="debug">
 
             <!-- Jumbotron -->
-            <section class="bg-success db-border db-h-2x">
-                Jumbotron
+            <section id="main-jumbotron" class="bg-success py-3 text-center">
+
+                <img src="img/avatar.svg" alt="Avatar">
+
             </section>
 
             <!-- Portfolio -->
