added jumbotron xs content

--- a/index.html
+++ b/index.html
@@ -55,9 +55,15 @@
         <main class="debug">
 
             <!-- Jumbotron -->
-            <section id="main-jumbotron" class="bg-success py-3 text-center">
+            <section id="main-jumbotron" class="bg-success py-3 text-white text-center text-uppercase">
 
-                <img src="img/avatar.svg" alt="Avatar">
+                <img src="img/avatar.svg" alt="Avatar" class="mb-3">
+
+                <h1>Start Bootstrap</h1>
+
+                <div>-</div>
+
+                <p>Graphic Artist - Web Designer - Illustrator</p>
 
             </section>
 
