--- a/index.html
+++ b/index.html
@@ -52,33 +52,55 @@
         </header>
 
         <!-- Main Content -->
-        <main class="debug">
+        <main>
 
             <!-- Jumbotron -->
             <section id="main-jumbotron" class="bg-success py-3 text-white text-center text-uppercase">
 
                 <img src="img/avatar.svg" alt="Avatar" class="mb-3">
 
+                <!-- Title -->
                 <h1>Start Bootstrap</h1>
 
-                <div>-</div>
+                <div class="sep">-</div>
 
                 <p>Graphic Artist - Web Designer - Illustrator</p>
 
             </section>
 
             <!-- Portfolio -->
-            <section class="bg-light db-border">
+            <section class="bg-light py-5 text-center">
                 <div class="container">
-                    <div class="db-border">Title</div>
-                    <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3">
-                        <div class="col bg-info db-h-1x">Card</div>
-                        <div class="col bg-info db-h-1x">Card</div>
-                        <div class="col bg-info db-h-1x">Card</div>
-                        <div class="col bg-info db-h-1x">Card</div>
-                        <div class="col bg-info db-h-1x">Card</div>
-                        <div class="col bg-info db-h-1x">Card</div>
+
+                    <!-- Title -->
+                    <h2 class="text-uppercase">Portfolio</h2>
+
+                    <div class="sep">-</div>
+
+                    <!-- Cards -->
+                    <div class="row gy-4 row-cols-1 row-cols-md-2 row-cols-lg-3">
+
+                        <div class="col">
+                            <img src="img/cabin.png" alt="Cabin" class="img-fluid overflow-hidden rounded">
+                        </div>
+                        <div class="col">
+                            <img src="img/cake.png" alt="Cake" class="img-fluid overflow-hidden rounded">
+                        </div>
+                        <div class="col">
+                            <img src="img/circus.png" alt="Circus" class="img-fluid overflow-hidden rounded">
+                        </div>
+                        <div class="col">
+                            <img src="img/game.png" alt="Game" class="img-fluid overflow-hidden rounded">
+                        </div>
+                        <div class="col">
+                            <img src="img/safe.png" alt="Safe" class="img-fluid overflow-hidden rounded">
+                        </div>
+                        <div class="col">
+                            <img src="img/submarine.png" alt="Submarine" class="img-fluid overflow-hidden rounded">
+                        </div>
+
                     </div>
+
                 </div>
             </section>
 
