fixed portfolio section padding on md res

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             </section>
 
             <!-- Portfolio -->
-            <section class="bg-light py-5 text-center">
+            <section class="bg-light py-4 py-md-5 text-center">
                 <div class="container">
 
                     <!-- Title -->
