--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </header>
 
         <!-- Main Content -->
-        <main>
+        <main class="fs-5">
 
             <!-- Jumbotron -->
             <section id="main-jumbotron" class="bg-success py-3 text-white text-center text-uppercase">
@@ -105,19 +105,24 @@
             </section>
 
             <!-- About -->
-            <section class="bg-success db-border">
+            <section class="bg-success py-4 py-md-5 text-white text-center">
                 
                 <div class="container-fluid">
-                    <div class="db-border">Title</div>
-                    <div class="row justify-content-center">
-                        <div class="col-8 col-md-4 bg-danger db-h-1x">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque, sunt debitis natus assumenda omnis tempore earum enim illum corporis voluptatum cumque dicta velit reprehenderit sapiente possimus vitae, voluptates iste quo.
+
+                    <!-- Title -->
+                    <h2 class="text-uppercase">About</h2>
+
+                    <div class="sep">-</div>
+
+                    <div class="row justify-content-center text-start">
+                        <div class="col-8 col-md-4 mb-3">
+                            <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.</p>
                         </div>
-                        <div class="col-8 col-md-4 bg-danger db-h-1x">
-                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repudiandae tempora commodi tempore provident quam nesciunt, laborum exercitationem. Sequi voluptatibus a minima voluptate vitae cumque, dignissimos, accusantium accusamus impedit, qui quibusdam.
+                        <div class="col-8 col-md-4 mb-3">
+                            <p>Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!</p>
                         </div>
                     </div>
-                    <div class="db-border">Button</div>
+                    <button><i class="fas fa-download me-2"></i>Download</button>
                 </div>
                 
             </section>
