fixed h1 and h2 style on md res

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             </section>
 
             <!-- Portfolio -->
-            <section class="bg-light py-4 py-md-5 text-center">
+            <section id="portfolio" class="bg-light py-4 py-md-5 text-center">
                 <div class="container">
 
                     <!-- Title -->
@@ -105,7 +105,7 @@
             </section>
 
             <!-- About -->
-            <section class="bg-success py-4 py-md-5 text-white text-center">
+            <section id="about" class="bg-success py-4 py-md-5 text-white text-center">
                 
                 <div class="container-fluid">
 
