added footer xs content

--- a/index.html
+++ b/index.html
@@ -163,25 +163,48 @@
         </main>
 
         <!-- Footer -->
-        <footer class="bg-secondary">
+        <footer class="bg-secondary text-white text-center">
 
             <!-- Footer Top -->
             <div class="container">
-                <div class="row row-cols-1 row-cols-md-3">
-                    <div class="col">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                <div class="row row-cols-1 row-cols-md-3 py-5 fs-5">
+
+                    <div class="col mb-4">
+
+                        <h4 class="text-uppercase">Location</h4>
+
+                        <address>2215 John Daniel Drive Clark, MO 54243</address>
+
                     </div>
-                    <div class="col">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+
+                    <div class="col mb-4">
+
+                        <h4 class="text-uppercase">Around The Web</h4>
+
+                        <nav>
+                            <ul class="list-inline">
+                                <li class="list-inline-item"><a href="#" class="text-decoration-none text-white border border-white rounded-circle p-1"><i class="fab fa-facebook"></i></a></li>
+                                <li class="list-inline-item"><a href="#" class="text-decoration-none text-white border border-white rounded-circle p-1"><i class="fab fa-google-plus"></i></a></li>
+                                <li class="list-inline-item"><a href="#" class="text-decoration-none text-white border border-white rounded-circle p-1"><i class="fab fa-twitter"></i></a></li>
+                                <li class="list-inline-item"><a href="#" class="text-decoration-none text-white border border-white rounded-circle p-1"><i class="fab fa-linkedin"></i></a></li>
+                            </ul>
+                        </nav>
+
                     </div>
-                    <div class="col">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+
+                    <div class="col mb-4">
+
+                        <h4 class="text-uppercase">About Freelancer</h4>
+
+                        <p>Freelance ia a free to use, open source Bootstrap theme created by <a href="#" class="text-decoration-none text-success">Start Bootstrap</a></p>
+
                     </div>
+                    
                 </div>
             </div>
 
             <!-- Footer Bottom -->
-            <div class="bg-dark text-white db-h-1x">Footer Bottom</div>
+            <div class="bg-dark py-4">Copyright Your Website 2019</div>
 
 
         </footer>
