--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <body>
 
         <!-- Main Header -->
-        <header class="py-4 bg-dark">
+        <header class="py-4 bg-darkblue">
             <div class="container">
                 <div class="row align-items-center">
 
@@ -56,7 +56,7 @@
         <main class="fs-5">
 
             <!-- Jumbotron -->
-            <section id="main-jumbotron" class="bg-success py-3 text-white text-center text-uppercase">
+            <section id="main-jumbotron" class="bg-green py-3 text-white text-center text-uppercase">
 
                 <img src="img/avatar.svg" alt="Avatar" class="mb-3">
 
@@ -108,7 +108,7 @@
 
 
             <!-- About -->
-            <section id="about" class="bg-success py-4 py-md-5 text-white text-center">
+            <section id="about" class="bg-green py-4 py-md-5 text-white text-center">
                 
                 <div class="container-fluid">
 
@@ -163,12 +163,13 @@
         </main>
 
         <!-- Footer -->
-        <footer class="bg-secondary text-white text-center">
+        <footer class="bg-blue text-white text-center">
 
             <!-- Footer Top -->
             <div class="container">
                 <div class="row row-cols-1 row-cols-md-3 py-5 fs-5">
 
+                    <!-- Location -->
                     <div class="col mb-4 mb-md-0">
 
                         <h5 class="text-uppercase">Location</h5>
@@ -177,6 +178,7 @@
 
                     </div>
 
+                    <!-- Social Bar -->
                     <div class="col mb-4 mb-md-0">
 
                         <h5 class="text-uppercase">Around The Web</h5>
@@ -192,11 +194,12 @@
 
                     </div>
 
+                    <!-- Footer About -->
                     <div class="col mb-4 mb-md-0">
 
                         <h5 class="text-uppercase">About Freelancer</h5>
 
-                        <p>Freelance ia a free to use, open source Bootstrap theme created by <a href="#" class="text-decoration-none text-success">Start Bootstrap</a></p>
+                        <p>Freelance ia a free to use, open source Bootstrap theme created by <a href="#" class="text-decoration-none text-green">Start Bootstrap</a></p>
 
                     </div>
 
@@ -204,7 +207,7 @@
             </div>
 
             <!-- Footer Bottom -->
-            <div class="bg-dark py-5">Copyright &copy; Your Website 2019</div>
+            <div class="bg-darkblue py-5">Copyright &copy; Your Website 2019</div>
 
 
         </footer>
