added social bar icons

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                             <p class="border-bottom border-dark">Phone Number</p>
                             <p class="border-bottom border-dark pb-5">Message</p>
 
-                            <button>Send</button>
+                            <button class="bg-green">Send</button>
                         </div>
                         
                     </div>
@@ -183,12 +183,12 @@
 
                         <h5 class="text-uppercase">Around The Web</h5>
 
-                        <nav>
+                        <nav class="social-bar">
                             <ul class="list-inline">
-                                <li class="list-inline-item"><a href="#" class="text-decoration-none text-white p-1"><i class="fab fa-facebook-f"></i></a></li>
-                                <li class="list-inline-item"><a href="#" class="text-decoration-none text-white p-1"><i class="fab fa-google-plus-g"></i></a></li>
-                                <li class="list-inline-item"><a href="#" class="text-decoration-none text-white p-1"><i class="fab fa-twitter"></i></a></li>
-                                <li class="list-inline-item"><a href="#" class="text-decoration-none text-white p-1"><i class="fab fa-linkedin-in"></i></a></li>
+                                <li class="list-inline-item"><a href="#" class="text-white"><i class="fab fa-facebook-f"></i></a></li>
+                                <li class="list-inline-item"><a href="#" class="text-white"><i class="fab fa-google-plus-g"></i></a></li>
+                                <li class="list-inline-item"><a href="#" class="text-white"><i class="fab fa-twitter"></i></a></li>
+                                <li class="list-inline-item"><a href="#" class="text-white"><i class="fab fa-linkedin-in"></i></a></li>
                             </ul>
                         </nav>
 
