--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 <!-- Title -->
                 <h1>Start Bootstrap</h1>
 
-                <div class="sep">-</div>
+                <div class="sep my-3"><i class="fas fa-star"></i></div>
 
                 <p>Graphic Artist - Web Designer - Illustrator</p>
 
@@ -77,7 +77,7 @@
                     <!-- Title -->
                     <h2 class="text-uppercase">Portfolio</h2>
 
-                    <div class="sep">-</div>
+                    <div class="sep my-3"><i class="fas fa-star"></i></div>
 
                     <!-- Cards -->
                     <div class="row gy-4 row-cols-1 row-cols-md-2 row-cols-lg-3">
@@ -115,7 +115,7 @@
                     <!-- Title -->
                     <h2 class="text-uppercase">About</h2>
 
-                    <div class="sep">-</div>
+                    <div class="sep my-3"><i class="fas fa-star"></i></div>
 
                     <!-- Grid -->
                     <div class="row justify-content-center text-start">
@@ -140,7 +140,7 @@
                     <!-- Title -->
                     <h2 class="text-uppercase">Contact Me</h2>
 
-                    <div class="sep">-</div>
+                    <div class="sep my-3"><i class="fas fa-star"></i></div>
 
                     <!-- Form -->
                     <div class="row justify-content-center">
