--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     <div class="sep my-3"><i class="fas fa-star"></i></div>
 
                     <!-- Cards -->
-                    <div class="row gy-4 row-cols-1 row-cols-md-2 row-cols-lg-3">
+                    <div class="row gy-4 row-cols-1 row-cols-md-2 row-cols-xl-3">
 
                         <div class="col">
                             <img src="img/cabin.png" alt="Cabin" class="img-fluid overflow-hidden rounded">
