--- a/index.html
+++ b/index.html
@@ -22,33 +22,43 @@
     <body>
 
         <!-- Main Header -->
-        <header class="py-4 bg-darkblue">
-            <div class="container">
-                <div class="row align-items-center">
+        <header>
 
-                    <!-- Header Left -->
-                    <div class="col">
-                        <a href="#" class="text-white text-decoration-none h5 text-uppercase">Start Bootstrap</a>
-                    </div>
+            <!-- Navbar -->
+            <nav class="navbar navbar-dark navbar-expand-md fw-bold text-uppercase bg-darkblue py-4">
 
-                    <!-- Header Right -->
-                    <div class="col text-end">
+                <div class="container">
 
-                        <!-- Toggler -->
-                        <a href="#" class="text-white text-decoration-none d-md-none"><i class="fas fa-bars fs-2"></i></a>
+                    <!-- Brand -->
+                    <a class="navbar-brand" href="#">Start Bootstrap</a>
 
-                        <!-- Menu -->
-                        <nav class="text-white d-none d-md-block fw-bold">
-                            <ul class="list-inline mb-0">
-                                <li class="list-inline-item"><a href="#" class="text-white text-decoration-none text-uppercase">Portfolio</a></li>
-                                <li class="list-inline-item ms-2"><a href="#" class="text-white text-decoration-none text-uppercase">About</a></li>
-                                <li class="list-inline-item ms-2"><a href="#" class="text-white text-decoration-none text-uppercase">Contact</a></li>
-                            </ul>
-                        </nav>
+                    <!-- Toggler -->
+                    <button class="navbar-toggler border-white" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+
+                    <!-- Menu -->
+                    <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+
+                        <ul class="navbar-nav">
+                            <li class="nav-item">
+                                <a class="nav-link text-white" href="#">Portfolio</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-white" href="#">About</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-white" href="#">Contact</a>
+                            </li>
+                        </ul>
+
                     </div>
 
                 </div>
-            </div>
+
+            </nav>
+
         </header>
 
 
