--- a/index.html
+++ b/index.html
@@ -219,8 +219,9 @@
             <!-- Footer Bottom -->
             <div class="bg-darkblue py-5">Copyright &copy; Your Website 2019</div>
 
-
         </footer>
-        
+
+        <!-- Bootstrap JS -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
     </body>
 </html>
