fixed separator width

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <header>
 
             <!-- Navbar -->
-            <nav class="navbar navbar-dark navbar-expand-md fw-bold text-uppercase bg-darkblue py-4">
+            <nav class="navbar navbar-dark navbar-expand-md bg-darkblue fw-bold text-uppercase py-4">
 
                 <div class="container">
 
@@ -66,7 +66,7 @@
         <main class="fs-5">
 
             <!-- Jumbotron -->
-            <section id="main-jumbotron" class="bg-green py-3 text-white text-center text-uppercase">
+            <section id="main-jumbotron" class="bg-green text-white text-center text-uppercase py-3">
 
                 <img src="img/avatar.svg" alt="Avatar" class="mb-3">
 
