--- a/index.html
+++ b/index.html
@@ -63,25 +63,25 @@
 
 
         <!-- Main Content -->
-        <main class="fs-5">
+        <main class="fs-5 text-center">
 
             <!-- Jumbotron -->
-            <section id="main-jumbotron" class="bg-green text-white text-center text-uppercase py-3">
+            <section id="main-jumbotron" class="bg-green text-white py-4 py-md-5">
 
                 <img src="img/avatar.svg" alt="Avatar" class="mb-3">
 
                 <!-- Title -->
-                <h1>Start Bootstrap</h1>
+                <h1 class="text-uppercase">Start Bootstrap</h1>
 
                 <div class="sep my-3"><i class="fas fa-star"></i></div>
 
-                <p>Graphic Artist - Web Designer - Illustrator</p>
+                <p class="text-uppercase">Graphic Artist - Web Designer - Illustrator</p>
 
             </section>
 
 
             <!-- Portfolio -->
-            <section id="portfolio" class="bg-light py-4 py-md-5 text-center">
+            <section id="portfolio" class="bg-light py-4 py-md-5">
                 <div class="container">
 
                     <!-- Title -->
@@ -90,7 +90,7 @@
                     <div class="sep my-3"><i class="fas fa-star"></i></div>
 
                     <!-- Cards -->
-                    <div class="row gy-4 row-cols-1 row-cols-md-2 row-cols-xl-3">
+                    <div class="row gy-4 row-cols-1 row-cols-md-2 row-cols-xl-3 mb-3">
 
                         <div class="col">
                             <img src="img/cabin.png" alt="Cabin" class="img-fluid overflow-hidden rounded">
@@ -118,7 +118,7 @@
 
 
             <!-- About -->
-            <section id="about" class="bg-green py-4 py-md-5 text-white text-center">
+            <section id="about" class="bg-green text-white py-4 py-md-5">
                 
                 <div class="container-fluid">
 
@@ -143,7 +143,7 @@
 
 
             <!-- Contact -->
-            <section class="bg-light py-4 py-md-5 text-center">
+            <section class="bg-light py-4 py-md-5">
                 
                 <div class="container-fluid">
 
@@ -172,12 +172,13 @@
 
         </main>
 
+
         <!-- Footer -->
-        <footer class="bg-blue text-white text-center">
+        <footer class="text-center bg-blue text-white">
 
             <!-- Footer Top -->
-            <div class="container">
-                <div class="row row-cols-1 row-cols-md-3 py-5 fs-5">
+            <div class="container py-5 fs-5">
+                <div class="row row-cols-1 row-cols-md-3">
 
                     <!-- Location -->
                     <div class="col mb-4 mb-md-0">
@@ -220,6 +221,7 @@
             <div class="bg-darkblue py-5">Copyright &copy; Your Website 2019</div>
 
         </footer>
+
 
         <!-- Bootstrap JS -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
