added bootstrap buttons

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                             <p>Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!</p>
                         </div>
                     </div>
-                    <button class="text-white bg-transparent border-white rounded p-1"><i class="fas fa-download me-2"></i>Download</button>
+                    <button class="btn btn-outline-light btn-lg"><i class="fas fa-download me-1"></i>Download</button>
                 </div>
                 
             </section>
@@ -161,7 +161,7 @@
                             <p class="border-bottom border-dark">Phone Number</p>
                             <p class="border-bottom border-dark pb-5">Message</p>
 
-                            <button class="bg-green border-success rounded p-1">Send</button>
+                            <button class="btn btn-success btn-lg">Send</button>
                         </div>
                         
                     </div>
