--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <header>
 
             <!-- Navbar -->
-            <nav class="navbar navbar-dark navbar-expand-md bg-darkblue fw-bold text-uppercase py-4">
+            <nav class="navbar navbar-dark navbar-expand-md bg-dark fw-bold text-uppercase py-4">
 
                 <div class="container">
 
@@ -66,7 +66,7 @@
         <main class="fs-5 text-center">
 
             <!-- Jumbotron -->
-            <section id="main-jumbotron" class="bg-green text-white py-4 py-md-5">
+            <section id="main-jumbotron" class="bg-success text-white py-4 py-md-5">
 
                 <img src="img/avatar.svg" alt="Avatar" class="mb-3">
 
@@ -118,7 +118,7 @@
 
 
             <!-- About -->
-            <section id="about" class="bg-green text-white py-4 py-md-5">
+            <section id="about" class="bg-success text-white py-4 py-md-5">
                 
                 <div class="container-fluid">
 
@@ -184,7 +184,7 @@
 
 
         <!-- Footer -->
-        <footer class="text-center bg-blue text-white">
+        <footer class="text-center bg-secondary text-white">
 
             <!-- Footer Top -->
             <div class="container py-5 fs-5">
@@ -220,7 +220,7 @@
 
                         <h5 class="text-uppercase">About Freelancer</h5>
 
-                        <p>Freelance ia a free to use, open source Bootstrap theme created by <a href="#" class="text-decoration-none text-green">Start Bootstrap</a></p>
+                        <p>Freelance ia a free to use, open source Bootstrap theme created by <a href="#" class="text-decoration-none text-success">Start Bootstrap</a></p>
 
                     </div>
 
@@ -228,7 +228,7 @@
             </div>
 
             <!-- Footer Bottom -->
-            <div class="bg-darkblue py-5">Copyright &copy; Your Website 2019</div>
+            <div class="bg-dark py-5">Copyright &copy; Your Website 2019</div>
 
         </footer>
 
