--- a/index.html
+++ b/index.html
@@ -206,10 +206,10 @@
 
                         <nav class="social-bar">
                             <ul class="list-inline">
-                                <li class="list-inline-item"><a href="#" class="text-white"><i class="fab fa-facebook-f"></i></a></li>
-                                <li class="list-inline-item"><a href="#" class="text-white"><i class="fab fa-google-plus-g"></i></a></li>
-                                <li class="list-inline-item"><a href="#" class="text-white"><i class="fab fa-twitter"></i></a></li>
-                                <li class="list-inline-item"><a href="#" class="text-white"><i class="fab fa-linkedin-in"></i></a></li>
+                                <li class="list-inline-item"><a href="#" class="btn btn-outline-light rounded-circle"><i class="fab fa-facebook-f"></i></a></li>
+                                <li class="list-inline-item"><a href="#" class="btn btn-outline-light rounded-circle"><i class="fab fa-google-plus-g"></i></a></li>
+                                <li class="list-inline-item"><a href="#" class="btn btn-outline-light rounded-circle"><i class="fab fa-twitter"></i></a></li>
+                                <li class="list-inline-item"><a href="#" class="btn btn-outline-light rounded-circle"><i class="fab fa-linkedin-in"></i></a></li>
                             </ul>
                         </nav>
 
