fixed font and spacing

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                     <div class="sep my-3"><i class="fas fa-star"></i></div>
 
                     <!-- Cards -->
-                    <div class="row gy-4 row-cols-1 row-cols-md-2 row-cols-xl-3 mb-3">
+                    <div class="row gy-4 row-cols-1 row-cols-md-2 row-cols-xl-3 mb-5">
 
                         <div class="col">
                             <img src="img/cabin.png" alt="Cabin" class="img-fluid overflow-hidden rounded">
@@ -205,11 +205,11 @@
                         <h5 class="text-uppercase">Around The Web</h5>
 
                         <nav class="social-bar">
-                            <ul class="list-inline">
-                                <li class="list-inline-item"><a href="#" class="btn btn-outline-light rounded-circle fs-5"><i class="fab fa-facebook-f"></i></a></li>
-                                <li class="list-inline-item"><a href="#" class="btn btn-outline-light rounded-circle fs-5"><i class="fab fa-google-plus-g"></i></a></li>
-                                <li class="list-inline-item"><a href="#" class="btn btn-outline-light rounded-circle fs-5"><i class="fab fa-twitter"></i></a></li>
-                                <li class="list-inline-item"><a href="#" class="btn btn-outline-light rounded-circle fs-5"><i class="fab fa-linkedin-in"></i></a></li>
+                            <ul class="list-inline mb-0">
+                                <li class="list-inline-item"><a href="#" class="btn btn-outline-light rounded-circle fs-5 mb-3"><i class="fab fa-facebook-f"></i></a></li>
+                                <li class="list-inline-item"><a href="#" class="btn btn-outline-light rounded-circle fs-5 mb-3"><i class="fab fa-google-plus-g"></i></a></li>
+                                <li class="list-inline-item"><a href="#" class="btn btn-outline-light rounded-circle fs-5 mb-3"><i class="fab fa-twitter"></i></a></li>
+                                <li class="list-inline-item"><a href="#" class="btn btn-outline-light rounded-circle fs-5 mb-3"><i class="fab fa-linkedin-in"></i></a></li>
                             </ul>
                         </nav>
 
